@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,11 +21,12 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 import javax.inject.Inject;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -57,25 +58,31 @@ import org.w3c.dom.Document;
 import org.w3c.dom.NodeList;
 
 import org.springframework.boot.build.DeployedPlugin;
-import org.springframework.boot.build.bom.Library.DependencyConstraintsDependencyVersions;
-import org.springframework.boot.build.bom.Library.DependencyLockDependencyVersions;
-import org.springframework.boot.build.bom.Library.DependencyVersions;
 import org.springframework.boot.build.bom.Library.Exclusion;
 import org.springframework.boot.build.bom.Library.Group;
 import org.springframework.boot.build.bom.Library.LibraryVersion;
+import org.springframework.boot.build.bom.Library.Link;
 import org.springframework.boot.build.bom.Library.Module;
 import org.springframework.boot.build.bom.Library.ProhibitedVersion;
 import org.springframework.boot.build.bom.Library.VersionAlignment;
 import org.springframework.boot.build.bom.bomr.version.DependencyVersion;
 import org.springframework.boot.build.mavenplugin.MavenExec;
+import org.springframework.boot.build.properties.BuildProperties;
 import org.springframework.util.FileCopyUtils;
+import org.springframework.util.PropertyPlaceholderHelper;
+import org.springframework.util.PropertyPlaceholderHelper.PlaceholderResolver;
 
 /**
  * DSL extensions for {@link BomPlugin}.
  *
  * @author Andy Wilkinson
+ * @author Phillip Webb
  */
 public class BomExtension {
+
+	private final Project project;
+
+	private final UpgradeHandler upgradeHandler;
 
 	private final Map<String, DependencyVersion> properties = new LinkedHashMap<>();
 
@@ -83,16 +90,9 @@ public class BomExtension {
 
 	private final List<Library> libraries = new ArrayList<>();
 
-	private final UpgradeHandler upgradeHandler;
-
-	private final DependencyHandler dependencyHandler;
-
-	private final Project project;
-
-	public BomExtension(DependencyHandler dependencyHandler, Project project) {
-		this.dependencyHandler = dependencyHandler;
-		this.upgradeHandler = project.getObjects().newInstance(UpgradeHandler.class);
+	public BomExtension(Project project) {
 		this.project = project;
+		this.upgradeHandler = project.getObjects().newInstance(UpgradeHandler.class, project);
 	}
 
 	public List<Library> getLibraries() {
@@ -104,60 +104,80 @@ public class BomExtension {
 	}
 
 	public Upgrade getUpgrade() {
-		return new Upgrade(this.upgradeHandler.upgradePolicy, new GitHub(this.upgradeHandler.gitHub.organization,
-				this.upgradeHandler.gitHub.repository, this.upgradeHandler.gitHub.issueLabels));
+		GitHubHandler gitHub = this.upgradeHandler.gitHub;
+		return new Upgrade(this.upgradeHandler.upgradePolicy,
+				new GitHub(gitHub.organization, gitHub.repository, gitHub.issueLabels));
 	}
 
 	public void library(String name, Action<LibraryHandler> action) {
-		this.library(name, null, action);
+		library(name, null, action);
 	}
 
 	public void library(String name, String version, Action<LibraryHandler> action) {
 		ObjectFactory objects = this.project.getObjects();
-		LibraryHandler libraryHandler = objects.newInstance(LibraryHandler.class, (version != null) ? version : "",
-				objects);
+		LibraryHandler libraryHandler = objects.newInstance(LibraryHandler.class, this.project,
+				(version != null) ? version : "");
 		action.execute(libraryHandler);
-		LibraryVersion libraryVersion = new LibraryVersion(DependencyVersion.parse(libraryHandler.version),
-				libraryHandler.versionAlignment);
-		addLibrary(new Library(name, libraryVersion, libraryHandler.groups, libraryHandler.prohibitedVersions,
-				libraryHandler.dependencyVersions));
+		LibraryVersion libraryVersion = new LibraryVersion(DependencyVersion.parse(libraryHandler.version));
+		VersionAlignment versionAlignment = (libraryHandler.alignWith.version != null)
+				? new VersionAlignment(libraryHandler.alignWith.version.from,
+						libraryHandler.alignWith.version.managedBy, this.project, this.libraries, libraryHandler.groups)
+				: null;
+		addLibrary(new Library(name, libraryHandler.calendarName, libraryVersion, libraryHandler.groups,
+				libraryHandler.prohibitedVersions, libraryHandler.considerSnapshots, versionAlignment,
+				libraryHandler.alignWith.dependencyManagementDeclaredIn, libraryHandler.linkRootName,
+				libraryHandler.links));
 	}
 
 	public void effectiveBomArtifact() {
 		Configuration effectiveBomConfiguration = this.project.getConfigurations().create("effectiveBom");
-		this.project.getTasks().matching((task) -> task.getName().equals(DeployedPlugin.GENERATE_POM_TASK_NAME))
-				.all((task) -> {
-					Sync syncBom = this.project.getTasks().create("syncBom", Sync.class);
-					syncBom.dependsOn(task);
-					File generatedBomDir = new File(this.project.getBuildDir(), "generated/bom");
-					syncBom.setDestinationDir(generatedBomDir);
-					syncBom.from(((GenerateMavenPom) task).getDestination(), (pom) -> pom.rename((name) -> "pom.xml"));
-					try {
-						String settingsXmlContent = FileCopyUtils
-								.copyToString(new InputStreamReader(
-										getClass().getClassLoader().getResourceAsStream("effective-bom-settings.xml"),
-										StandardCharsets.UTF_8))
-								.replace("localRepositoryPath",
-										new File(this.project.getBuildDir(), "local-m2-repository").getAbsolutePath());
-						syncBom.from(this.project.getResources().getText().fromString(settingsXmlContent),
-								(settingsXml) -> settingsXml.rename((name) -> "settings.xml"));
-					}
-					catch (IOException ex) {
-						throw new GradleException("Failed to prepare settings.xml", ex);
-					}
-					MavenExec generateEffectiveBom = this.project.getTasks().create("generateEffectiveBom",
-							MavenExec.class);
-					generateEffectiveBom.setProjectDir(generatedBomDir);
-					File effectiveBom = new File(this.project.getBuildDir(),
-							"generated/effective-bom/" + this.project.getName() + "-effective-bom.xml");
-					generateEffectiveBom.args("--settings", "settings.xml", "help:effective-pom",
-							"-Doutput=" + effectiveBom);
-					generateEffectiveBom.dependsOn(syncBom);
-					generateEffectiveBom.getOutputs().file(effectiveBom);
-					generateEffectiveBom.doLast(new StripUnrepeatableOutputAction(effectiveBom));
-					this.project.getArtifacts().add(effectiveBomConfiguration.getName(), effectiveBom,
+		this.project.getTasks()
+			.matching((task) -> task.getName().equals(DeployedPlugin.GENERATE_POM_TASK_NAME))
+			.all((task) -> {
+				Sync syncBom = this.project.getTasks().create("syncBom", Sync.class);
+				syncBom.dependsOn(task);
+				File generatedBomDir = this.project.getLayout()
+					.getBuildDirectory()
+					.dir("generated/bom")
+					.get()
+					.getAsFile();
+				syncBom.setDestinationDir(generatedBomDir);
+				syncBom.from(((GenerateMavenPom) task).getDestination(), (pom) -> pom.rename((name) -> "pom.xml"));
+				try {
+					String settingsXmlContent = FileCopyUtils
+						.copyToString(new InputStreamReader(
+								getClass().getClassLoader().getResourceAsStream("effective-bom-settings.xml"),
+								StandardCharsets.UTF_8))
+						.replace("localRepositoryPath",
+								this.project.getLayout()
+									.getBuildDirectory()
+									.dir("local-m2-repository")
+									.get()
+									.getAsFile()
+									.getAbsolutePath());
+					syncBom.from(this.project.getResources().getText().fromString(settingsXmlContent),
+							(settingsXml) -> settingsXml.rename((name) -> "settings.xml"));
+				}
+				catch (IOException ex) {
+					throw new GradleException("Failed to prepare settings.xml", ex);
+				}
+				MavenExec generateEffectiveBom = this.project.getTasks()
+					.create("generateEffectiveBom", MavenExec.class);
+				generateEffectiveBom.getProjectDir().set(generatedBomDir);
+				File effectiveBom = this.project.getLayout()
+					.getBuildDirectory()
+					.file("generated/effective-bom/" + this.project.getName() + "-effective-bom.xml")
+					.get()
+					.getAsFile();
+				generateEffectiveBom.args("--settings", "settings.xml", "help:effective-pom",
+						"-Doutput=" + effectiveBom);
+				generateEffectiveBom.dependsOn(syncBom);
+				generateEffectiveBom.getOutputs().file(effectiveBom);
+				generateEffectiveBom.doLast(new StripUnrepeatableOutputAction(effectiveBom));
+				this.project.getArtifacts()
+					.add(effectiveBomConfiguration.getName(), effectiveBom,
 							(artifact) -> artifact.builtBy(generateEffectiveBom));
-				});
+			});
 	}
 
 	private String createDependencyNotation(String groupId, String artifactId, DependencyVersion version) {
@@ -188,6 +208,7 @@ public class BomExtension {
 	}
 
 	private void addLibrary(Library library) {
+		DependencyHandler dependencies = this.project.getDependencies();
 		this.libraries.add(library);
 		String versionProperty = library.getVersionProperty();
 		if (versionProperty != null) {
@@ -195,20 +216,28 @@ public class BomExtension {
 		}
 		for (Group group : library.getGroups()) {
 			for (Module module : group.getModules()) {
-				putArtifactVersionProperty(group.getId(), module.getName(), module.getClassifier(), versionProperty);
-				this.dependencyHandler.getConstraints().add(JavaPlatformPlugin.API_CONFIGURATION_NAME,
-						createDependencyNotation(group.getId(), module.getName(), library.getVersion().getVersion()));
+				addModule(library, dependencies, versionProperty, group, module);
 			}
 			for (String bomImport : group.getBoms()) {
-				putArtifactVersionProperty(group.getId(), bomImport, versionProperty);
-				String bomDependency = createDependencyNotation(group.getId(), bomImport,
-						library.getVersion().getVersion());
-				this.dependencyHandler.add(JavaPlatformPlugin.API_CONFIGURATION_NAME,
-						this.dependencyHandler.platform(bomDependency));
-				this.dependencyHandler.add(BomPlugin.API_ENFORCED_CONFIGURATION_NAME,
-						this.dependencyHandler.enforcedPlatform(bomDependency));
+				addBomImport(library, dependencies, versionProperty, group, bomImport);
 			}
 		}
+	}
+
+	private void addModule(Library library, DependencyHandler dependencies, String versionProperty, Group group,
+			Module module) {
+		putArtifactVersionProperty(group.getId(), module.getName(), module.getClassifier(), versionProperty);
+		String constraint = createDependencyNotation(group.getId(), module.getName(),
+				library.getVersion().getVersion());
+		dependencies.getConstraints().add(JavaPlatformPlugin.API_CONFIGURATION_NAME, constraint);
+	}
+
+	private void addBomImport(Library library, DependencyHandler dependencies, String versionProperty, Group group,
+			String bomImport) {
+		putArtifactVersionProperty(group.getId(), bomImport, versionProperty);
+		String bomDependency = createDependencyNotation(group.getId(), bomImport, library.getVersion().getVersion());
+		dependencies.add(JavaPlatformPlugin.API_CONFIGURATION_NAME, dependencies.platform(bomDependency));
+		dependencies.add(BomPlugin.API_ENFORCED_CONFIGURATION_NAME, dependencies.enforcedPlatform(bomDependency));
 	}
 
 	public static class LibraryHandler {
@@ -217,66 +246,109 @@ public class BomExtension {
 
 		private final List<ProhibitedVersion> prohibitedVersions = new ArrayList<>();
 
-		private final ObjectFactory objectFactory;
+		private final AlignWithHandler alignWith;
+
+		private boolean considerSnapshots = false;
 
 		private String version;
 
-		private VersionAlignment versionAlignment;
+		private String calendarName;
 
-		private DependencyVersions dependencyVersions;
+		private String linkRootName;
+
+		private final Map<String, List<Link>> links = new HashMap<>();
 
 		@Inject
-		public LibraryHandler(String version, ObjectFactory objectFactory) {
+		public LibraryHandler(Project project, String version) {
 			this.version = version;
-			this.objectFactory = objectFactory;
+			this.alignWith = project.getObjects().newInstance(AlignWithHandler.class);
 		}
 
-		public void version(String version, Action<VersionHandler> action) {
+		public void version(String version) {
 			this.version = version;
-			VersionHandler versionHandler = new VersionHandler();
-			action.execute(versionHandler);
-			this.versionAlignment = new VersionAlignment(versionHandler.libraryName);
+		}
+
+		public void considerSnapshots() {
+			this.considerSnapshots = true;
+		}
+
+		public void setCalendarName(String calendarName) {
+			this.calendarName = calendarName;
 		}
 
 		public void group(String id, Action<GroupHandler> action) {
 			GroupHandler groupHandler = new GroupHandler(id);
 			action.execute(groupHandler);
 			this.groups
-					.add(new Group(groupHandler.id, groupHandler.modules, groupHandler.plugins, groupHandler.imports));
+				.add(new Group(groupHandler.id, groupHandler.modules, groupHandler.plugins, groupHandler.imports));
 		}
 
-		public void prohibit(String range, Action<ProhibitedVersionHandler> action) {
-			ProhibitedVersionHandler prohibitedVersionHandler = new ProhibitedVersionHandler();
-			action.execute(prohibitedVersionHandler);
-			try {
-				this.prohibitedVersions.add(new ProhibitedVersion(VersionRange.createFromVersionSpec(range),
-						prohibitedVersionHandler.reason));
-			}
-			catch (InvalidVersionSpecificationException ex) {
-				throw new InvalidUserCodeException("Invalid version range", ex);
-			}
+		public void prohibit(Action<ProhibitedHandler> action) {
+			ProhibitedHandler handler = new ProhibitedHandler();
+			action.execute(handler);
+			this.prohibitedVersions.add(new ProhibitedVersion(handler.versionRange, handler.startsWith,
+					handler.endsWith, handler.contains, handler.reason));
 		}
 
-		public void dependencyVersions(Action<DependencyVersionsHandler> action) {
-			DependencyVersionsHandler dependencyVersionsHandler = this.objectFactory
-					.newInstance(DependencyVersionsHandler.class, this.version);
-			action.execute(dependencyVersionsHandler);
-			this.dependencyVersions = dependencyVersionsHandler.dependencyVersions;
+		public void alignWith(Action<AlignWithHandler> action) {
+			action.execute(this.alignWith);
 		}
 
-		public static class VersionHandler {
-
-			private String libraryName;
-
-			public void shouldAlignWithVersionFrom(String libraryName) {
-				this.libraryName = libraryName;
-			}
-
+		public void links(Action<LinksHandler> action) {
+			links(null, action);
 		}
 
-		public static class ProhibitedVersionHandler {
+		public void links(String linkRootName, Action<LinksHandler> action) {
+			LinksHandler handler = new LinksHandler();
+			action.execute(handler);
+			this.linkRootName = linkRootName;
+			this.links.putAll(handler.links);
+		}
+
+		public static class ProhibitedHandler {
 
 			private String reason;
+
+			private final List<String> startsWith = new ArrayList<>();
+
+			private final List<String> endsWith = new ArrayList<>();
+
+			private final List<String> contains = new ArrayList<>();
+
+			private VersionRange versionRange;
+
+			public void versionRange(String versionRange) {
+				try {
+					this.versionRange = VersionRange.createFromVersionSpec(versionRange);
+				}
+				catch (InvalidVersionSpecificationException ex) {
+					throw new InvalidUserCodeException("Invalid version range", ex);
+				}
+			}
+
+			public void startsWith(String startsWith) {
+				this.startsWith.add(startsWith);
+			}
+
+			public void startsWith(Collection<String> startsWith) {
+				this.startsWith.addAll(startsWith);
+			}
+
+			public void endsWith(String endsWith) {
+				this.endsWith.add(endsWith);
+			}
+
+			public void endsWith(Collection<String> endsWith) {
+				this.endsWith.addAll(endsWith);
+			}
+
+			public void contains(String contains) {
+				this.contains.add(contains);
+			}
+
+			public void contains(List<String> contains) {
+				this.contains.addAll(contains);
+			}
 
 			public void because(String because) {
 				this.reason = because;
@@ -300,8 +372,8 @@ public class BomExtension {
 
 			public void setModules(List<Object> modules) {
 				this.modules = modules.stream()
-						.map((input) -> (input instanceof Module) ? (Module) input : new Module((String) input))
-						.collect(Collectors.toList());
+					.map((input) -> (input instanceof Module module) ? module : new Module((String) input))
+					.toList();
 			}
 
 			public void setImports(List<String> imports) {
@@ -313,11 +385,9 @@ public class BomExtension {
 			}
 
 			public Object methodMissing(String name, Object args) {
-				if (args instanceof Object[] && ((Object[]) args).length == 1) {
-					Object arg = ((Object[]) args)[0];
-					if (arg instanceof Closure) {
+				if (args instanceof Object[] argsArray && argsArray.length == 1) {
+					if (argsArray[0] instanceof Closure<?> closure) {
 						ModuleHandler moduleHandler = new ModuleHandler();
-						Closure<?> closure = (Closure<?>) arg;
 						closure.setResolveStrategy(Closure.DELEGATE_FIRST);
 						closure.setDelegate(moduleHandler);
 						closure.call(moduleHandler);
@@ -351,31 +421,33 @@ public class BomExtension {
 
 		}
 
-		public static class DependencyVersionsHandler {
+		public static class AlignWithHandler {
 
-			private final String libraryVersion;
+			private VersionHandler version;
 
-			private DependencyVersions dependencyVersions;
+			private String dependencyManagementDeclaredIn;
 
-			@Inject
-			public DependencyVersionsHandler(String libraryVersion) {
-				this.libraryVersion = libraryVersion;
+			public void version(Action<VersionHandler> action) {
+				this.version = new VersionHandler();
+				action.execute(this.version);
 			}
 
-			public void extractFrom(Action<ExtractFromHandler> action) {
-				action.execute(new ExtractFromHandler());
+			public void dependencyManagementDeclaredIn(String bomCoordinates) {
+				this.dependencyManagementDeclaredIn = bomCoordinates;
 			}
 
-			public class ExtractFromHandler {
+			public static class VersionHandler {
 
-				public void dependencyLock(String location) {
-					DependencyVersionsHandler.this.dependencyVersions = new DependencyLockDependencyVersions(location,
-							DependencyVersionsHandler.this.libraryVersion);
+				private String from;
+
+				private String managedBy;
+
+				public void from(String from) {
+					this.from = from;
 				}
 
-				public void dependencyConstraints(String location) {
-					DependencyVersionsHandler.this.dependencyVersions = new DependencyConstraintsDependencyVersions(
-							location, DependencyVersionsHandler.this.libraryVersion);
+				public void managedBy(String managedBy) {
+					this.managedBy = managedBy;
 				}
 
 			}
@@ -384,11 +456,99 @@ public class BomExtension {
 
 	}
 
+	public static class LinksHandler {
+
+		private final Map<String, List<Link>> links = new HashMap<>();
+
+		public void site(String linkTemplate) {
+			site(asFactory(linkTemplate));
+		}
+
+		public void site(Function<LibraryVersion, String> linkFactory) {
+			add("site", linkFactory);
+		}
+
+		public void github(String linkTemplate) {
+			github(asFactory(linkTemplate));
+		}
+
+		public void github(Function<LibraryVersion, String> linkFactory) {
+			add("github", linkFactory);
+		}
+
+		public void docs(String linkTemplate) {
+			docs(asFactory(linkTemplate));
+		}
+
+		public void docs(Function<LibraryVersion, String> linkFactory) {
+			add("docs", linkFactory);
+		}
+
+		public void javadoc(String linkTemplate) {
+			javadoc(asFactory(linkTemplate));
+		}
+
+		public void javadoc(String linkTemplate, String... packages) {
+			javadoc(asFactory(linkTemplate), packages);
+		}
+
+		public void javadoc(Function<LibraryVersion, String> linkFactory) {
+			add("javadoc", linkFactory);
+		}
+
+		public void javadoc(Function<LibraryVersion, String> linkFactory, String... packages) {
+			add("javadoc", linkFactory, packages);
+		}
+
+		public void javadoc(String rootName, Function<LibraryVersion, String> linkFactory, String... packages) {
+			add(rootName, "javadoc", linkFactory, packages);
+		}
+
+		public void releaseNotes(String linkTemplate) {
+			releaseNotes(asFactory(linkTemplate));
+		}
+
+		public void releaseNotes(Function<LibraryVersion, String> linkFactory) {
+			add("releaseNotes", linkFactory);
+		}
+
+		public void add(String name, String linkTemplate) {
+			add(name, asFactory(linkTemplate));
+		}
+
+		public void add(String name, Function<LibraryVersion, String> linkFactory) {
+			add(name, linkFactory, null);
+		}
+
+		public void add(String name, Function<LibraryVersion, String> linkFactory, String[] packages) {
+			add(null, name, linkFactory, packages);
+		}
+
+		private void add(String rootName, String name, Function<LibraryVersion, String> linkFactory,
+				String[] packages) {
+			Link link = new Link(rootName, linkFactory, (packages != null) ? List.of(packages) : null);
+			this.links.computeIfAbsent(name, (key) -> new ArrayList<>()).add(link);
+		}
+
+		private Function<LibraryVersion, String> asFactory(String linkTemplate) {
+			return (version) -> {
+				PlaceholderResolver resolver = (name) -> "version".equals(name) ? version.toString() : null;
+				return new PropertyPlaceholderHelper("{", "}").replacePlaceholders(linkTemplate, resolver);
+			};
+		}
+
+	}
+
 	public static class UpgradeHandler {
 
 		private UpgradePolicy upgradePolicy;
 
-		private final GitHubHandler gitHub = new GitHubHandler();
+		private final GitHubHandler gitHub;
+
+		@Inject
+		public UpgradeHandler(Project project) {
+			this.gitHub = new GitHubHandler(project);
+		}
 
 		public void setPolicy(UpgradePolicy upgradePolicy) {
 			this.upgradePolicy = upgradePolicy;
@@ -423,11 +583,17 @@ public class BomExtension {
 
 	public static class GitHubHandler {
 
-		private String organization = "spring-projects";
+		private String organization;
 
-		private String repository = "spring-boot";
+		private String repository;
 
 		private List<String> issueLabels;
+
+		public GitHubHandler(Project project) {
+			BuildProperties buildProperties = BuildProperties.get(project);
+			this.organization = buildProperties.gitHub().organization();
+			this.repository = buildProperties.gitHub().repository();
+		}
 
 		public void setOrganization(String organization) {
 			this.organization = organization;
@@ -445,9 +611,9 @@ public class BomExtension {
 
 	public static final class GitHub {
 
-		private String organization = "spring-projects";
+		private String organization;
 
-		private String repository = "spring-boot";
+		private String repository;
 
 		private final List<String> issueLabels;
 
@@ -495,8 +661,9 @@ public class BomExtension {
 				org.w3c.dom.Node reporting = (org.w3c.dom.Node) xpath.evaluate("/project/reporting", document,
 						XPathConstants.NODE);
 				reporting.getParentNode().removeChild(reporting);
-				TransformerFactory.newInstance().newTransformer().transform(new DOMSource(document),
-						new StreamResult(this.effectiveBom));
+				TransformerFactory.newInstance()
+					.newTransformer()
+					.transform(new DOMSource(document), new StreamResult(this.effectiveBom));
 			}
 			catch (Exception ex) {
 				throw new TaskExecutionException(task, ex);
