@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,6 +30,7 @@ import java.util.Arrays;
 import java.util.Properties;
 import java.util.function.BiConsumer;
 
+import javax.inject.Inject;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
@@ -54,7 +55,11 @@ import org.gradle.api.artifacts.component.ModuleComponentIdentifier;
 import org.gradle.api.artifacts.result.ResolvedArtifactResult;
 import org.gradle.api.attributes.DocsType;
 import org.gradle.api.attributes.Usage;
+import org.gradle.api.component.AdhocComponentWithVariants;
+import org.gradle.api.component.ConfigurationVariantDetails;
+import org.gradle.api.component.SoftwareComponent;
 import org.gradle.api.file.CopySpec;
+import org.gradle.api.file.Directory;
 import org.gradle.api.file.DirectoryProperty;
 import org.gradle.api.file.FileCollection;
 import org.gradle.api.file.RegularFileProperty;
@@ -62,11 +67,12 @@ import org.gradle.api.model.ObjectFactory;
 import org.gradle.api.plugins.JavaLibraryPlugin;
 import org.gradle.api.plugins.JavaPlugin;
 import org.gradle.api.plugins.JavaPluginExtension;
+import org.gradle.api.provider.Provider;
 import org.gradle.api.publish.PublishingExtension;
 import org.gradle.api.publish.maven.MavenPublication;
 import org.gradle.api.publish.maven.plugins.MavenPublishPlugin;
+import org.gradle.api.publish.tasks.GenerateModuleMetadata;
 import org.gradle.api.tasks.Classpath;
-import org.gradle.api.tasks.Copy;
 import org.gradle.api.tasks.InputFiles;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.OutputDirectory;
@@ -75,17 +81,23 @@ import org.gradle.api.tasks.PathSensitive;
 import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetContainer;
+import org.gradle.api.tasks.Sync;
 import org.gradle.api.tasks.TaskAction;
 import org.gradle.api.tasks.TaskExecutionException;
+import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.bundling.Jar;
 import org.gradle.api.tasks.javadoc.Javadoc;
 import org.gradle.external.javadoc.StandardJavadocDocletOptions;
 import org.w3c.dom.Document;
+import org.w3c.dom.Element;
 import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
 import org.springframework.boot.build.DeployedPlugin;
 import org.springframework.boot.build.MavenRepositoryPlugin;
+import org.springframework.boot.build.optional.OptionalDependenciesPlugin;
+import org.springframework.boot.build.test.DockerTestPlugin;
 import org.springframework.boot.build.test.IntegrationTestPlugin;
 import org.springframework.core.CollectionFactory;
 import org.springframework.util.Assert;
@@ -114,6 +126,33 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		addDocumentPluginGoalsTask(project, generatePluginDescriptorTask);
 		addPrepareMavenBinariesTask(project);
 		addExtractVersionPropertiesTask(project);
+		publishOptionalDependenciesInPom(project);
+		project.getTasks().withType(GenerateModuleMetadata.class).configureEach((task) -> task.setEnabled(false));
+	}
+
+	private void publishOptionalDependenciesInPom(Project project) {
+		project.getPlugins().withType(OptionalDependenciesPlugin.class, (optionalDependencies) -> {
+			SoftwareComponent component = project.getComponents().findByName("java");
+			if (component instanceof AdhocComponentWithVariants componentWithVariants) {
+				componentWithVariants.addVariantsFromConfiguration(
+						project.getConfigurations().getByName(OptionalDependenciesPlugin.OPTIONAL_CONFIGURATION_NAME),
+						ConfigurationVariantDetails::mapToOptional);
+			}
+		});
+		MavenPublication publication = (MavenPublication) project.getExtensions()
+			.getByType(PublishingExtension.class)
+			.getPublications()
+			.getByName("maven");
+		publication.getPom().withXml((xml) -> {
+			Element root = xml.asElement();
+			NodeList children = root.getChildNodes();
+			for (int i = 0; i < children.getLength(); i++) {
+				Node child = children.item(i);
+				if ("dependencyManagement".equals(child.getNodeName())) {
+					root.removeChild(child);
+				}
+			}
+		});
 	}
 
 	private void configurePomPackaging(Project project) {
@@ -128,27 +167,31 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	private void addPopulateIntTestMavenRepositoryTask(Project project) {
 		Configuration runtimeClasspathWithMetadata = project.getConfigurations().create("runtimeClasspathWithMetadata");
 		runtimeClasspathWithMetadata
-				.extendsFrom(project.getConfigurations().getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME));
+			.extendsFrom(project.getConfigurations().getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME));
 		runtimeClasspathWithMetadata.attributes((attributes) -> attributes.attribute(DocsType.DOCS_TYPE_ATTRIBUTE,
 				project.getObjects().named(DocsType.class, "maven-repository")));
 		RuntimeClasspathMavenRepository runtimeClasspathMavenRepository = project.getTasks()
-				.create("runtimeClasspathMavenRepository", RuntimeClasspathMavenRepository.class);
-		runtimeClasspathMavenRepository.getOutputDirectory()
-				.set(new File(project.getBuildDir(), "runtime-classpath-repository"));
+			.create("runtimeClasspathMavenRepository", RuntimeClasspathMavenRepository.class);
+		runtimeClasspathMavenRepository.getOutputDir()
+			.set(project.getLayout().getBuildDirectory().dir("runtime-classpath-repository"));
 		project.getDependencies()
-				.components((components) -> components.all(MavenRepositoryComponentMetadataRule.class));
-		Copy task = project.getTasks().create("populateIntTestMavenRepository", Copy.class);
-		task.setDestinationDir(new File(project.getBuildDir(), "int-test-maven-repository"));
+			.components((components) -> components.all(MavenRepositoryComponentMetadataRule.class));
+		Sync task = project.getTasks().create("populateTestMavenRepository", Sync.class);
+		task.setDestinationDir(project.getLayout().getBuildDirectory().dir("test-maven-repository").get().getAsFile());
 		task.with(copyIntTestMavenRepositoryFiles(project, runtimeClasspathMavenRepository));
 		task.dependsOn(project.getTasks().getByName(MavenRepositoryPlugin.PUBLISH_TO_PROJECT_REPOSITORY_TASK_NAME));
 		project.getTasks().getByName(IntegrationTestPlugin.INT_TEST_TASK_NAME).dependsOn(task);
+		project.getPlugins()
+			.withType(DockerTestPlugin.class)
+			.all((dockerTestPlugin) -> project.getTasks()
+				.named(DockerTestPlugin.DOCKER_TEST_TASK_NAME, (dockerTest) -> dockerTest.dependsOn(task)));
 	}
 
 	private CopySpec copyIntTestMavenRepositoryFiles(Project project,
 			RuntimeClasspathMavenRepository runtimeClasspathMavenRepository) {
 		CopySpec copySpec = project.copySpec();
 		copySpec.from(project.getConfigurations().getByName(MavenRepositoryPlugin.MAVEN_REPOSITORY_CONFIGURATION_NAME));
-		copySpec.from(new File(project.getBuildDir(), "maven-repository"));
+		copySpec.from(project.getLayout().getBuildDirectory().dir("maven-repository"));
 		copySpec.from(runtimeClasspathMavenRepository);
 		return copySpec;
 	}
@@ -156,30 +199,30 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	private void addDocumentPluginGoalsTask(Project project, MavenExec generatePluginDescriptorTask) {
 		DocumentPluginGoals task = project.getTasks().create("documentPluginGoals", DocumentPluginGoals.class);
 		File pluginXml = new File(generatePluginDescriptorTask.getOutputs().getFiles().getSingleFile(), "plugin.xml");
-		task.setPluginXml(pluginXml);
-		task.setOutputDir(new File(project.getBuildDir(), "docs/generated/goals/"));
+		task.getPluginXml().set(pluginXml);
+		task.getOutputDir().set(project.getLayout().getBuildDirectory().dir("docs/generated/goals/"));
 		task.dependsOn(generatePluginDescriptorTask);
 	}
 
 	private MavenExec addGenerateHelpMojoTask(Project project, Jar jarTask) {
-		File helpMojoDir = new File(project.getBuildDir(), "help-mojo");
+		Provider<Directory> helpMojoDir = project.getLayout().getBuildDirectory().dir("help-mojo");
 		MavenExec task = createGenerateHelpMojoTask(project, helpMojoDir);
-		task.dependsOn(createCopyHelpMojoInputsTask(project, helpMojoDir));
+		task.dependsOn(createSyncHelpMojoInputsTask(project, helpMojoDir));
 		includeHelpMojoInJar(jarTask, task);
 		return task;
 	}
 
-	private MavenExec createGenerateHelpMojoTask(Project project, File helpMojoDir) {
+	private MavenExec createGenerateHelpMojoTask(Project project, Provider<Directory> helpMojoDir) {
 		MavenExec task = project.getTasks().create("generateHelpMojo", MavenExec.class);
-		task.setProjectDir(helpMojoDir);
+		task.getProjectDir().set(helpMojoDir);
 		task.args("org.apache.maven.plugins:maven-plugin-plugin:3.6.1:helpmojo");
-		task.getOutputs().dir(new File(helpMojoDir, "target/generated-sources/plugin"));
+		task.getOutputs().dir(helpMojoDir.map((directory) -> directory.dir("target/generated-sources/plugin")));
 		return task;
 	}
 
-	private Copy createCopyHelpMojoInputsTask(Project project, File helpMojoDir) {
-		Copy task = project.getTasks().create("copyHelpMojoInputs", Copy.class);
-		task.setDestinationDir(helpMojoDir);
+	private Sync createSyncHelpMojoInputsTask(Project project, Provider<Directory> helpMojoDir) {
+		Sync task = project.getTasks().create("syncHelpMojoInputs", Sync.class);
+		task.setDestinationDir(helpMojoDir.get().getAsFile());
 		File pomFile = new File(project.getProjectDir(), "src/maven/resources/pom.xml");
 		task.from(pomFile, (copy) -> replaceVersionPlaceholder(copy, project));
 		return task;
@@ -191,15 +234,17 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	}
 
 	private MavenExec addGeneratePluginDescriptorTask(Project project, Jar jarTask, MavenExec generateHelpMojoTask) {
-		File pluginDescriptorDir = new File(project.getBuildDir(), "plugin-descriptor");
-		File generatedHelpMojoDir = new File(project.getBuildDir(), "generated/sources/helpMojo");
+		Provider<Directory> pluginDescriptorDir = project.getLayout().getBuildDirectory().dir("plugin-descriptor");
+		Provider<Directory> generatedHelpMojoDir = project.getLayout()
+			.getBuildDirectory()
+			.dir("generated/sources/helpMojo");
 		SourceSet mainSourceSet = getMainSourceSet(project);
 		project.getTasks().withType(Javadoc.class, this::setJavadocOptions);
-		FormatHelpMojoSourceTask copyFormattedHelpMojoSourceTask = createCopyFormattedHelpMojoSourceTask(project,
-				generateHelpMojoTask, generatedHelpMojoDir);
-		project.getTasks().getByName(mainSourceSet.getCompileJavaTaskName()).dependsOn(copyFormattedHelpMojoSourceTask);
-		mainSourceSet.java((javaSources) -> javaSources.srcDir(copyFormattedHelpMojoSourceTask));
-		Copy pluginDescriptorInputs = createCopyPluginDescriptorInputs(project, pluginDescriptorDir, mainSourceSet);
+		FormatHelpMojoSource formattedHelpMojoSource = createFormatHelpMojoSource(project, generateHelpMojoTask,
+				generatedHelpMojoDir);
+		project.getTasks().getByName(mainSourceSet.getCompileJavaTaskName()).dependsOn(formattedHelpMojoSource);
+		mainSourceSet.java((javaSources) -> javaSources.srcDir(formattedHelpMojoSource));
+		Sync pluginDescriptorInputs = createSyncPluginDescriptorInputs(project, pluginDescriptorDir, mainSourceSet);
 		pluginDescriptorInputs.dependsOn(mainSourceSet.getClassesTaskName());
 		MavenExec task = createGeneratePluginDescriptorTask(project, pluginDescriptorDir);
 		task.dependsOn(pluginDescriptorInputs);
@@ -217,18 +262,19 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		options.addMultilineStringsOption("tag").setValue(Arrays.asList("goal:X", "requiresProject:X", "threadSafe:X"));
 	}
 
-	private FormatHelpMojoSourceTask createCopyFormattedHelpMojoSourceTask(Project project,
-			MavenExec generateHelpMojoTask, File generatedHelpMojoDir) {
-		FormatHelpMojoSourceTask copyFormattedHelpMojoSourceTask = project.getTasks()
-				.create("copyFormattedHelpMojoSource", FormatHelpMojoSourceTask.class);
-		copyFormattedHelpMojoSourceTask.setGenerator(generateHelpMojoTask);
-		copyFormattedHelpMojoSourceTask.setOutputDir(generatedHelpMojoDir);
-		return copyFormattedHelpMojoSourceTask;
+	private FormatHelpMojoSource createFormatHelpMojoSource(Project project, MavenExec generateHelpMojoTask,
+			Provider<Directory> generatedHelpMojoDir) {
+		FormatHelpMojoSource formatHelpMojoSource = project.getTasks()
+			.create("formatHelpMojoSource", FormatHelpMojoSource.class);
+		formatHelpMojoSource.setGenerator(generateHelpMojoTask);
+		formatHelpMojoSource.getOutputDir().set(generatedHelpMojoDir);
+		return formatHelpMojoSource;
 	}
 
-	private Copy createCopyPluginDescriptorInputs(Project project, File destination, SourceSet sourceSet) {
-		Copy pluginDescriptorInputs = project.getTasks().create("copyPluginDescriptorInputs", Copy.class);
-		pluginDescriptorInputs.setDestinationDir(destination);
+	private Sync createSyncPluginDescriptorInputs(Project project, Provider<Directory> destination,
+			SourceSet sourceSet) {
+		Sync pluginDescriptorInputs = project.getTasks().create("syncPluginDescriptorInputs", Sync.class);
+		pluginDescriptorInputs.setDestinationDir(destination.get().getAsFile());
 		File pomFile = new File(project.getProjectDir(), "src/maven/resources/pom.xml");
 		pluginDescriptorInputs.from(pomFile, (copy) -> replaceVersionPlaceholder(copy, project));
 		pluginDescriptorInputs.from(sourceSet.getOutput().getClassesDirs(), (sync) -> sync.into("target/classes"));
@@ -237,13 +283,16 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		return pluginDescriptorInputs;
 	}
 
-	private MavenExec createGeneratePluginDescriptorTask(Project project, File mavenDir) {
+	private MavenExec createGeneratePluginDescriptorTask(Project project, Provider<Directory> mavenDir) {
 		MavenExec generatePluginDescriptor = project.getTasks().create("generatePluginDescriptor", MavenExec.class);
 		generatePluginDescriptor.args("org.apache.maven.plugins:maven-plugin-plugin:3.6.1:descriptor");
-		generatePluginDescriptor.getOutputs().dir(new File(mavenDir, "target/classes/META-INF/maven"));
-		generatePluginDescriptor.getInputs().dir(new File(mavenDir, "target/classes/org"))
-				.withPathSensitivity(PathSensitivity.RELATIVE).withPropertyName("plugin classes");
-		generatePluginDescriptor.setProjectDir(mavenDir);
+		generatePluginDescriptor.getOutputs()
+			.dir(mavenDir.map((directory) -> directory.dir("target/classes/META-INF/maven")));
+		generatePluginDescriptor.getInputs()
+			.dir(mavenDir.map((directory) -> directory.dir("target/classes/org")))
+			.withPathSensitivity(PathSensitivity.RELATIVE)
+			.withPropertyName("plugin classes");
+		generatePluginDescriptor.getProjectDir().set(mavenDir);
 		return generatePluginDescriptor;
 	}
 
@@ -253,9 +302,16 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	}
 
 	private void addPrepareMavenBinariesTask(Project project) {
-		PrepareMavenBinaries task = project.getTasks().create("prepareMavenBinaries", PrepareMavenBinaries.class);
-		task.setOutputDir(new File(project.getBuildDir(), "maven-binaries"));
-		project.getTasks().getByName(IntegrationTestPlugin.INT_TEST_TASK_NAME).dependsOn(task);
+		TaskProvider<PrepareMavenBinaries> task = project.getTasks()
+			.register("prepareMavenBinaries", PrepareMavenBinaries.class,
+					(prepareMavenBinaries) -> prepareMavenBinaries.getOutputDir()
+						.set(project.getLayout().getBuildDirectory().dir("maven-binaries")));
+		project.getTasks()
+			.getByName(IntegrationTestPlugin.INT_TEST_TASK_NAME)
+			.getInputs()
+			.dir(task.map(PrepareMavenBinaries::getOutputDir))
+			.withPathSensitivity(PathSensitivity.RELATIVE)
+			.withPropertyName("mavenBinaries");
 	}
 
 	private void replaceVersionPlaceholder(CopySpec copy, Project project) {
@@ -267,49 +323,52 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	}
 
 	private void addExtractVersionPropertiesTask(Project project) {
-		ExtractVersionProperties extractVersionProperties = project.getTasks().create("extractVersionProperties",
-				ExtractVersionProperties.class);
+		ExtractVersionProperties extractVersionProperties = project.getTasks()
+			.create("extractVersionProperties", ExtractVersionProperties.class);
 		extractVersionProperties.setEffectiveBoms(project.getConfigurations().create("versionProperties"));
-		extractVersionProperties.getDestination().set(project.getLayout().getBuildDirectory().dir("generated-resources")
+		extractVersionProperties.getDestination()
+			.set(project.getLayout()
+				.getBuildDirectory()
+				.dir("generated-resources")
 				.map((dir) -> dir.file("extracted-versions.properties")));
 	}
 
-	public static class FormatHelpMojoSourceTask extends DefaultTask {
+	public abstract static class FormatHelpMojoSource extends DefaultTask {
+
+		private final ObjectFactory objectFactory;
+
+		@Inject
+		public FormatHelpMojoSource(ObjectFactory objectFactory) {
+			this.objectFactory = objectFactory;
+		}
 
 		private Task generator;
 
-		private File outputDir;
-
 		void setGenerator(Task generator) {
 			this.generator = generator;
-			getInputs().files(this.generator).withPathSensitivity(PathSensitivity.RELATIVE)
-					.withPropertyName("generated source");
+			getInputs().files(this.generator)
+				.withPathSensitivity(PathSensitivity.RELATIVE)
+				.withPropertyName("generated source");
 		}
 
 		@OutputDirectory
-		public File getOutputDir() {
-			return this.outputDir;
-		}
-
-		void setOutputDir(File outputDir) {
-			this.outputDir = outputDir;
-		}
+		public abstract DirectoryProperty getOutputDir();
 
 		@TaskAction
 		void syncAndFormat() {
 			FileFormatter formatter = new FileFormatter();
 			for (File output : this.generator.getOutputs().getFiles()) {
-				formatter.formatFiles(getProject().fileTree(output), StandardCharsets.UTF_8)
-						.forEach((edit) -> save(output, edit));
+				formatter.formatFiles(this.objectFactory.fileTree().from(output), StandardCharsets.UTF_8)
+					.forEach((edit) -> save(output, edit));
 			}
 		}
 
 		private void save(File output, FileEdit edit) {
 			Path relativePath = output.toPath().relativize(edit.getFile().toPath());
-			Path outputLocation = this.outputDir.toPath().resolve(relativePath);
+			Path outputLocation = getOutputDir().getAsFile().get().toPath().resolve(relativePath);
 			try {
 				Files.createDirectories(outputLocation.getParent());
-				Files.write(outputLocation, edit.getFormattedContent().getBytes(StandardCharsets.UTF_8));
+				Files.writeString(outputLocation, edit.getFormattedContent());
 			}
 			catch (Exception ex) {
 				throw new TaskExecutionException(this, ex);
@@ -329,10 +388,11 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 		@Override
 		public void execute(ComponentMetadataContext context) {
-			context.getDetails().maybeAddVariant("compileWithMetadata", "compile",
-					(variant) -> configureVariant(context, variant));
-			context.getDetails().maybeAddVariant("apiElementsWithMetadata", "apiElements",
-					(variant) -> configureVariant(context, variant));
+			context.getDetails()
+				.maybeAddVariant("compileWithMetadata", "compile", (variant) -> configureVariant(context, variant));
+			context.getDetails()
+				.maybeAddVariant("apiElementsWithMetadata", "apiElements",
+						(variant) -> configureVariant(context, variant));
 		}
 
 		private void configureVariant(ComponentMetadataContext context, VariantMetadata variant) {
@@ -349,21 +409,16 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 	}
 
-	public static class RuntimeClasspathMavenRepository extends DefaultTask {
+	public abstract static class RuntimeClasspathMavenRepository extends DefaultTask {
 
 		private final Configuration runtimeClasspath;
 
-		private final DirectoryProperty outputDirectory;
-
 		public RuntimeClasspathMavenRepository() {
 			this.runtimeClasspath = getProject().getConfigurations().getByName("runtimeClasspathWithMetadata");
-			this.outputDirectory = getProject().getObjects().directoryProperty();
 		}
 
 		@OutputDirectory
-		public DirectoryProperty getOutputDirectory() {
-			return this.outputDirectory;
-		}
+		public abstract DirectoryProperty getOutputDir();
 
 		@Classpath
 		public Configuration getRuntimeClasspath() {
@@ -373,14 +428,15 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		@TaskAction
 		public void createRepository() {
 			for (ResolvedArtifactResult result : this.runtimeClasspath.getIncoming().getArtifacts()) {
-				if (result.getId().getComponentIdentifier() instanceof ModuleComponentIdentifier) {
-					ModuleComponentIdentifier identifier = (ModuleComponentIdentifier) result.getId()
-							.getComponentIdentifier();
-					String fileName = result.getFile().getName()
-							.replace(identifier.getVersion() + "-" + identifier.getVersion(), identifier.getVersion());
-					File repositoryLocation = this.outputDirectory.dir(identifier.getGroup().replace('.', '/') + "/"
-							+ identifier.getModule() + "/" + identifier.getVersion() + "/" + fileName).get()
-							.getAsFile();
+				if (result.getId().getComponentIdentifier() instanceof ModuleComponentIdentifier identifier) {
+					String fileName = result.getFile()
+						.getName()
+						.replace(identifier.getVersion() + "-" + identifier.getVersion(), identifier.getVersion());
+					File repositoryLocation = getOutputDir()
+						.dir(identifier.getGroup().replace('.', '/') + "/" + identifier.getModule() + "/"
+								+ identifier.getVersion() + "/" + fileName)
+						.get()
+						.getAsFile();
 					repositoryLocation.getParentFile().mkdirs();
 					try {
 						Files.copy(result.getFile().toPath(), repositoryLocation.toPath(),
@@ -395,15 +451,9 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 	}
 
-	public static class ExtractVersionProperties extends DefaultTask {
-
-		private final RegularFileProperty destination;
+	public abstract static class ExtractVersionProperties extends DefaultTask {
 
 		private FileCollection effectiveBoms;
-
-		public ExtractVersionProperties() {
-			this.destination = getProject().getObjects().fileProperty();
-		}
 
 		@InputFiles
 		@PathSensitive(PathSensitivity.RELATIVE)
@@ -416,9 +466,7 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		}
 
 		@OutputFile
-		public RegularFileProperty getDestination() {
-			return this.destination;
-		}
+		public abstract RegularFileProperty getDestination();
 
 		@TaskAction
 		public void extractVersionProperties() {
@@ -428,7 +476,7 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		}
 
 		private void writeProperties(Properties versions) {
-			File outputFile = this.destination.getAsFile().get();
+			File outputFile = getDestination().getAsFile().get();
 			outputFile.getParentFile().mkdirs();
 			try (Writer writer = new FileWriter(outputFile)) {
 				versions.store(writer, null);
@@ -448,6 +496,8 @@ public class MavenPluginPlugin implements Plugin<Project> {
 			effectiveBom.property("spring-framework.version", versions::setProperty);
 			effectiveBom.property("jakarta-servlet.version", versions::setProperty);
 			effectiveBom.property("kotlin.version", versions::setProperty);
+			effectiveBom.property("assertj.version", versions::setProperty);
+			effectiveBom.property("junit-jupiter.version", versions::setProperty);
 			return versions;
 		}
 
@@ -487,8 +537,8 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 		private String get(String expression) {
 			try {
-				Node node = (Node) this.xpath.compile("/project/" + expression).evaluate(this.document,
-						XPathConstants.NODE);
+				Node node = (Node) this.xpath.compile("/project/" + expression)
+					.evaluate(this.document, XPathConstants.NODE);
 				String text = (node != null) ? node.getTextContent() : null;
 				Assert.hasLength(text, () -> "No result for expression " + expression);
 				return text;
