@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,11 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.sql.DataSource;
 
 import org.flywaydb.core.api.MigrationState;
-import org.flywaydb.core.api.MigrationType;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.boot.actuate.flyway.FlywayEndpoint;
@@ -37,10 +35,9 @@ import org.springframework.jdbc.datasource.embedded.EmbeddedDatabaseBuilder;
 import org.springframework.restdocs.mockmvc.MockMvcRestDocumentation;
 import org.springframework.restdocs.payload.FieldDescriptor;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
 import static org.springframework.restdocs.payload.PayloadDocumentation.responseFields;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * Tests for generating documentation describing the {@link FlywayEndpoint}.
@@ -50,37 +47,36 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 class FlywayEndpointDocumentationTests extends MockMvcEndpointDocumentationTests {
 
 	@Test
-	void flyway() throws Exception {
-		this.mockMvc.perform(get("/actuator/flyway")).andExpect(status().isOk())
-				.andDo(MockMvcRestDocumentation.document("flyway",
-						responseFields(fieldWithPath("contexts").description("Application contexts keyed by id"),
-								fieldWithPath("contexts.*.flywayBeans.*.migrations").description(
-										"Migrations performed by the Flyway instance, keyed by Flyway bean name."))
-												.andWithPrefix("contexts.*.flywayBeans.*.migrations.[].",
-														migrationFieldDescriptors())
-												.and(parentIdField())));
+	void flyway() {
+		assertThat(this.mvc.get().uri("/actuator/flyway")).hasStatusOk()
+			.apply(MockMvcRestDocumentation.document("flyway",
+					responseFields(fieldWithPath("contexts").description("Application contexts keyed by id"),
+							fieldWithPath("contexts.*.flywayBeans.*.migrations")
+								.description("Migrations performed by the Flyway instance, keyed by Flyway bean name."))
+						.andWithPrefix("contexts.*.flywayBeans.*.migrations.[].", migrationFieldDescriptors())
+						.and(parentIdField())));
 	}
 
 	private List<FieldDescriptor> migrationFieldDescriptors() {
-		return Arrays.asList(fieldWithPath("checksum").description("Checksum of the migration, if any.").optional(),
+		return List.of(fieldWithPath("checksum").description("Checksum of the migration, if any.").optional(),
 				fieldWithPath("description").description("Description of the migration, if any.").optional(),
 				fieldWithPath("executionTime").description("Execution time in milliseconds of an applied migration.")
-						.optional(),
+					.optional(),
 				fieldWithPath("installedBy").description("User that installed the applied migration, if any.")
-						.optional(),
+					.optional(),
 				fieldWithPath("installedOn")
-						.description("Timestamp of when the applied migration was installed, if any.").optional(),
+					.description("Timestamp of when the applied migration was installed, if any.")
+					.optional(),
 				fieldWithPath("installedRank")
-						.description("Rank of the applied migration, if any. Later migrations have higher ranks.")
-						.optional(),
+					.description("Rank of the applied migration, if any. Later migrations have higher ranks.")
+					.optional(),
 				fieldWithPath("script").description("Name of the script used to execute the migration, if any.")
-						.optional(),
+					.optional(),
 				fieldWithPath("state")
-						.description("State of the migration. (" + describeEnumValues(MigrationState.class) + ")"),
-				fieldWithPath("type")
-						.description("Type of the migration. (" + describeEnumValues(MigrationType.class) + ")"),
+					.description("State of the migration. (" + describeEnumValues(MigrationState.class) + ")"),
+				fieldWithPath("type").description("Type of the migration."),
 				fieldWithPath("version").description("Version of the database after applying the migration, if any.")
-						.optional());
+					.optional());
 	}
 
 	@Configuration(proxyBeanMethods = false)
@@ -91,7 +87,8 @@ class FlywayEndpointDocumentationTests extends MockMvcEndpointDocumentationTests
 		@Bean
 		DataSource dataSource() {
 			return new EmbeddedDatabaseBuilder().generateUniqueName(true)
-					.setType(EmbeddedDatabaseConnection.get(getClass().getClassLoader()).getType()).build();
+				.setType(EmbeddedDatabaseConnection.get(getClass().getClassLoader()).getType())
+				.build();
 		}
 
 		@Bean
