@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,10 +20,12 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
+import org.springframework.aot.hint.MemberCategory;
+import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.predicate.RuntimeHintsPredicates;
 import org.springframework.boot.actuate.endpoint.EndpointId;
 import org.springframework.boot.actuate.endpoint.annotation.DiscoveredEndpoint;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
@@ -45,7 +47,9 @@ import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
  *
  * @author Phillip Webb
  * @author Stephane Nicoll
+ * @author Moritz Halbritter
  */
+@SuppressWarnings({ "deprecation", "removal" })
 class ControllerEndpointDiscovererTests {
 
 	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner();
@@ -53,7 +57,7 @@ class ControllerEndpointDiscovererTests {
 	@Test
 	void getEndpointsWhenNoEndpointBeansShouldReturnEmptyCollection() {
 		this.contextRunner.withUserConfiguration(EmptyConfiguration.class)
-				.run(assertDiscoverer((discoverer) -> assertThat(discoverer.getEndpoints()).isEmpty()));
+			.run(assertDiscoverer((discoverer) -> assertThat(discoverer.getEndpoints()).isEmpty()));
 	}
 
 	@Test
@@ -71,59 +75,69 @@ class ControllerEndpointDiscovererTests {
 	@Test
 	void getEndpointsShouldDiscoverProxyControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestProxyControllerEndpoint.class)
-				.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					assertThat(endpoints).hasSize(1);
-					ExposableControllerEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testcontroller"));
-					assertThat(endpoint.getController()).isInstanceOf(TestProxyControllerEndpoint.class);
-					assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
-				}));
+			.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				assertThat(endpoints).hasSize(1);
+				ExposableControllerEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testcontroller"));
+				assertThat(endpoint.getController()).isInstanceOf(TestProxyControllerEndpoint.class);
+				assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
+			}));
 	}
 
 	@Test
 	void getEndpointsShouldIncludeRestControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestRestControllerEndpoint.class)
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					assertThat(endpoints).hasSize(1);
-					ExposableControllerEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
-					assertThat(endpoint.getController()).isInstanceOf(TestRestControllerEndpoint.class);
-				}));
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				assertThat(endpoints).hasSize(1);
+				ExposableControllerEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
+				assertThat(endpoint.getController()).isInstanceOf(TestRestControllerEndpoint.class);
+			}));
 	}
 
 	@Test
 	void getEndpointsShouldDiscoverProxyRestControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestProxyRestControllerEndpoint.class)
-				.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					assertThat(endpoints).hasSize(1);
-					ExposableControllerEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
-					assertThat(endpoint.getController()).isInstanceOf(TestProxyRestControllerEndpoint.class);
-					assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
-				}));
+			.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				assertThat(endpoints).hasSize(1);
+				ExposableControllerEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
+				assertThat(endpoint.getController()).isInstanceOf(TestProxyRestControllerEndpoint.class);
+				assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
+			}));
 	}
 
 	@Test
 	void getEndpointsShouldNotDiscoverRegularEndpoints() {
 		this.contextRunner.withUserConfiguration(WithRegularEndpointConfiguration.class)
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					List<EndpointId> ids = endpoints.stream().map(ExposableControllerEndpoint::getEndpointId)
-							.collect(Collectors.toList());
-					assertThat(ids).containsOnly(EndpointId.of("testcontroller"), EndpointId.of("testrestcontroller"));
-				}));
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				List<EndpointId> ids = endpoints.stream().map(ExposableControllerEndpoint::getEndpointId).toList();
+				assertThat(ids).containsOnly(EndpointId.of("testcontroller"), EndpointId.of("testrestcontroller"));
+			}));
 	}
 
 	@Test
 	void getEndpointWhenEndpointHasOperationsShouldThrowException() {
-		this.contextRunner.withUserConfiguration(TestControllerWithOperation.class).run(
-				assertDiscoverer((discoverer) -> assertThatIllegalStateException().isThrownBy(discoverer::getEndpoints)
-						.withMessageContaining("ControllerEndpoints must not declare operations")));
+		this.contextRunner.withUserConfiguration(TestControllerWithOperation.class)
+			.run(assertDiscoverer((discoverer) -> assertThatIllegalStateException().isThrownBy(discoverer::getEndpoints)
+				.withMessageContaining("ControllerEndpoints must not declare operations")));
+	}
+
+	@Test
+	void shouldRegisterHints() {
+		RuntimeHints runtimeHints = new RuntimeHints();
+		new ControllerEndpointDiscoverer.ControllerEndpointDiscovererRuntimeHints().registerHints(runtimeHints,
+				getClass().getClassLoader());
+		assertThat(RuntimeHintsPredicates.reflection()
+			.onType(ControllerEndpointFilter.class)
+			.withMemberCategories(MemberCategory.INVOKE_DECLARED_CONSTRUCTORS)).accepts(runtimeHints);
+
 	}
 
 	private ContextConsumer<AssertableApplicationContext> assertDiscoverer(
