@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,8 +24,9 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.SynchronousQueue;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
+import org.eclipse.jetty.ee10.servlet.ServletContextHandler;
 import org.eclipse.jetty.server.AbstractConnector;
 import org.eclipse.jetty.server.Connector;
 import org.eclipse.jetty.server.CustomRequestLog;
@@ -46,6 +47,7 @@ import org.springframework.boot.autoconfigure.web.ServerProperties.Jetty;
 import org.springframework.boot.context.properties.bind.Bindable;
 import org.springframework.boot.context.properties.bind.Binder;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySources;
+import org.springframework.boot.testsupport.web.servlet.DirtiesUrlFactories;
 import org.springframework.boot.web.embedded.jetty.ConfigurableJettyWebServerFactory;
 import org.springframework.boot.web.embedded.jetty.JettyServletWebServerFactory;
 import org.springframework.boot.web.embedded.jetty.JettyWebServer;
@@ -64,6 +66,7 @@ import static org.mockito.Mockito.mock;
  * @author Phillip Webb
  * @author HaiTao Zhang
  */
+@DirtiesUrlFactories
 class JettyWebServerFactoryCustomizerTests {
 
 	private MockEnvironment environment;
@@ -159,7 +162,7 @@ class JettyWebServerFactoryCustomizerTests {
 		assertThat(defaultQueue).isInstanceOf(BlockingArrayQueue.class);
 		assertThat(configuredQueue).isInstanceOf(BlockingArrayQueue.class);
 		assertThat(((BlockingArrayQueue<?>) defaultQueue).getMaxCapacity())
-				.isEqualTo(((BlockingArrayQueue<?>) configuredQueue).getMaxCapacity());
+			.isEqualTo(((BlockingArrayQueue<?>) configuredQueue).getMaxCapacity());
 	}
 
 	@Test
@@ -236,7 +239,7 @@ class JettyWebServerFactoryCustomizerTests {
 		assertThat(queuedThreadPool.getMinThreads()).isEqualTo(defaultProperties.getThreads().getMin());
 		assertThat(queuedThreadPool.getMaxThreads()).isEqualTo(defaultProperties.getThreads().getMax());
 		assertThat(queuedThreadPool.getIdleTimeout())
-				.isEqualTo(defaultProperties.getThreads().getIdleTimeout().toMillis());
+			.isEqualTo(defaultProperties.getThreads().getIdleTimeout().toMillis());
 	}
 
 	private CustomRequestLog getRequestLog(JettyWebServer server) {
@@ -260,27 +263,58 @@ class JettyWebServerFactoryCustomizerTests {
 	}
 
 	@Test
-	void customizeMaxHttpHeaderSize() {
-		bind("server.max-http-header-size=2048");
+	void customizeMaxRequestHttpHeaderSize() {
+		bind("server.max-http-request-header-size=2048");
 		JettyWebServer server = customizeAndGetServer();
 		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
 		assertThat(requestHeaderSizes).containsOnly(2048);
 	}
 
 	@Test
-	void customMaxHttpHeaderSizeIgnoredIfNegative() {
-		bind("server.max-http-header-size=-1");
+	void customMaxHttpRequestHeaderSizeIgnoredIfNegative() {
+		bind("server.max-http-request-header-size=-1");
 		JettyWebServer server = customizeAndGetServer();
 		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
 		assertThat(requestHeaderSizes).containsOnly(8192);
 	}
 
 	@Test
-	void customMaxHttpHeaderSizeIgnoredIfZero() {
-		bind("server.max-http-header-size=0");
+	void customMaxHttpRequestHeaderSizeIgnoredIfZero() {
+		bind("server.max-http-request-header-size=0");
 		JettyWebServer server = customizeAndGetServer();
 		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
 		assertThat(requestHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void defaultMaxHttpResponseHeaderSize() {
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customizeMaxHttpResponseHeaderSize() {
+		bind("server.jetty.max-http-response-header-size=2KB");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(2048);
+	}
+
+	@Test
+	void customMaxHttpResponseHeaderSizeIgnoredIfNegative() {
+		bind("server.jetty.max-http-response-header-size=-1");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customMaxHttpResponseHeaderSizeIgnoredIfZero() {
+		bind("server.jetty.max-http-response-header-size=0");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
 	}
 
 	@Test
@@ -291,30 +325,57 @@ class JettyWebServerFactoryCustomizerTests {
 		assertThat(timeouts).containsOnly(60000L);
 	}
 
+	@Test
+	void customMaxFormKeys() {
+		bind("server.jetty.max-form-keys=2048");
+		JettyWebServer server = customizeAndGetServer();
+		startAndStopToMakeInternalsAvailable(server);
+		List<Integer> maxFormKeys = server.getServer()
+			.getHandlers()
+			.stream()
+			.filter(ServletContextHandler.class::isInstance)
+			.map(ServletContextHandler.class::cast)
+			.map(ServletContextHandler::getMaxFormKeys)
+			.toList();
+		assertThat(maxFormKeys).containsOnly(2048);
+	}
+
 	private List<Long> connectorsIdleTimeouts(JettyWebServer server) {
-		// Start (and directly stop) server to have connectors available
-		server.start();
-		server.stop();
+		startAndStopToMakeInternalsAvailable(server);
 		return Arrays.stream(server.getServer().getConnectors())
-				.filter((connector) -> connector instanceof AbstractConnector).map(Connector::getIdleTimeout)
-				.collect(Collectors.toList());
+			.filter((connector) -> connector instanceof AbstractConnector)
+			.map(Connector::getIdleTimeout)
+			.toList();
 	}
 
 	private List<Integer> getRequestHeaderSizes(JettyWebServer server) {
+		return getHeaderSizes(server, HttpConfiguration::getRequestHeaderSize);
+	}
+
+	private List<Integer> getResponseHeaderSizes(JettyWebServer server) {
+		return getHeaderSizes(server, HttpConfiguration::getResponseHeaderSize);
+	}
+
+	private List<Integer> getHeaderSizes(JettyWebServer server, Function<HttpConfiguration, Integer> provider) {
 		List<Integer> requestHeaderSizes = new ArrayList<>();
-		// Start (and directly stop) server to have connectors available
-		server.start();
-		server.stop();
+		startAndStopToMakeInternalsAvailable(server);
 		Connector[] connectors = server.getServer().getConnectors();
 		for (Connector connector : connectors) {
-			connector.getConnectionFactories().stream().filter((factory) -> factory instanceof ConnectionFactory)
-					.forEach((cf) -> {
-						ConnectionFactory factory = (ConnectionFactory) cf;
-						HttpConfiguration configuration = factory.getHttpConfiguration();
-						requestHeaderSizes.add(configuration.getRequestHeaderSize());
-					});
+			connector.getConnectionFactories()
+				.stream()
+				.filter((factory) -> factory instanceof ConnectionFactory)
+				.forEach((cf) -> {
+					ConnectionFactory factory = (ConnectionFactory) cf;
+					HttpConfiguration configuration = factory.getHttpConfiguration();
+					requestHeaderSizes.add(provider.apply(configuration));
+				});
 		}
 		return requestHeaderSizes;
+	}
+
+	private void startAndStopToMakeInternalsAvailable(JettyWebServer server) {
+		server.start();
+		server.stop();
 	}
 
 	private BlockingQueue<?> getQueue(ThreadPool threadPool) {
