@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,15 +22,17 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
-import java.util.Calendar;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.Collection;
-import java.util.GregorianCalendar;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.regex.Pattern;
 import java.util.zip.CRC32;
 import java.util.zip.ZipEntry;
 
@@ -47,12 +49,18 @@ import org.gradle.api.java.archives.Manifest;
 import org.gradle.api.specs.Spec;
 import org.gradle.api.tasks.WorkResult;
 import org.gradle.api.tasks.WorkResults;
+import org.gradle.util.GradleVersion;
 
+import org.springframework.boot.gradle.tasks.bundling.ResolvedDependencies.DependencyDescriptor;
 import org.springframework.boot.loader.tools.DefaultLaunchScript;
 import org.springframework.boot.loader.tools.FileUtils;
 import org.springframework.boot.loader.tools.JarModeLibrary;
 import org.springframework.boot.loader.tools.Layer;
 import org.springframework.boot.loader.tools.LayersIndex;
+import org.springframework.boot.loader.tools.LibraryCoordinates;
+import org.springframework.boot.loader.tools.LoaderImplementation;
+import org.springframework.boot.loader.tools.NativeImageArgFile;
+import org.springframework.boot.loader.tools.ReachabilityMetadataProperties;
 import org.springframework.util.Assert;
 import org.springframework.util.StreamUtils;
 import org.springframework.util.StringUtils;
@@ -67,8 +75,13 @@ import org.springframework.util.StringUtils;
  */
 class BootZipCopyAction implements CopyAction {
 
-	static final long CONSTANT_TIME_FOR_ZIP_ENTRIES = new GregorianCalendar(1980, Calendar.FEBRUARY, 1, 0, 0, 0)
-			.getTimeInMillis();
+	static final long CONSTANT_TIME_FOR_ZIP_ENTRIES = OffsetDateTime.of(1980, 2, 1, 0, 0, 0, 0, ZoneOffset.UTC)
+		.toInstant()
+		.toEpochMilli();
+
+	private static final Pattern REACHABILITY_METADATA_PROPERTIES_LOCATION_PATTERN = Pattern
+		.compile(ReachabilityMetadataProperties.REACHABILITY_METADATA_PROPERTIES_LOCATION_TEMPLATE.formatted(".*", ".*",
+				".*"));
 
 	private final File output;
 
@@ -76,9 +89,13 @@ class BootZipCopyAction implements CopyAction {
 
 	private final boolean preserveFileTimestamps;
 
+	private final Integer dirMode;
+
+	private final Integer fileMode;
+
 	private final boolean includeDefaultLoader;
 
-	private final String layerToolsLocation;
+	private final String jarmodeToolsLocation;
 
 	private final Spec<FileTreeElement> requiresUnpack;
 
@@ -92,25 +109,37 @@ class BootZipCopyAction implements CopyAction {
 
 	private final String encoding;
 
+	private final ResolvedDependencies resolvedDependencies;
+
+	private final boolean supportsSignatureFile;
+
 	private final LayerResolver layerResolver;
 
-	BootZipCopyAction(File output, Manifest manifest, boolean preserveFileTimestamps, boolean includeDefaultLoader,
-			String layerToolsLocation, Spec<FileTreeElement> requiresUnpack, Spec<FileTreeElement> exclusions,
-			LaunchScriptConfiguration launchScript, Spec<FileCopyDetails> librarySpec,
+	private final LoaderImplementation loaderImplementation;
+
+	BootZipCopyAction(File output, Manifest manifest, boolean preserveFileTimestamps, Integer dirMode, Integer fileMode,
+			boolean includeDefaultLoader, String jarmodeToolsLocation, Spec<FileTreeElement> requiresUnpack,
+			Spec<FileTreeElement> exclusions, LaunchScriptConfiguration launchScript, Spec<FileCopyDetails> librarySpec,
 			Function<FileCopyDetails, ZipCompression> compressionResolver, String encoding,
-			LayerResolver layerResolver) {
+			ResolvedDependencies resolvedDependencies, boolean supportsSignatureFile, LayerResolver layerResolver,
+			LoaderImplementation loaderImplementation) {
 		this.output = output;
 		this.manifest = manifest;
 		this.preserveFileTimestamps = preserveFileTimestamps;
+		this.dirMode = dirMode;
+		this.fileMode = fileMode;
 		this.includeDefaultLoader = includeDefaultLoader;
-		this.layerToolsLocation = layerToolsLocation;
+		this.jarmodeToolsLocation = jarmodeToolsLocation;
 		this.requiresUnpack = requiresUnpack;
 		this.exclusions = exclusions;
 		this.launchScript = launchScript;
 		this.librarySpec = librarySpec;
 		this.compressionResolver = compressionResolver;
 		this.encoding = encoding;
+		this.resolvedDependencies = resolvedDependencies;
+		this.supportsSignatureFile = supportsSignatureFile;
 		this.layerResolver = layerResolver;
+		this.loaderImplementation = loaderImplementation;
 	}
 
 	@Override
@@ -174,6 +203,7 @@ class BootZipCopyAction implements CopyAction {
 			outputStream.close();
 		}
 		catch (IOException ex) {
+			// Ignore
 		}
 	}
 
@@ -190,7 +220,9 @@ class BootZipCopyAction implements CopyAction {
 
 		private final Set<String> writtenDirectories = new LinkedHashSet<>();
 
-		private final Set<String> writtenLibraries = new LinkedHashSet<>();
+		private final Map<String, FileCopyDetails> writtenLibraries = new LinkedHashMap<>();
+
+		private final Map<String, FileCopyDetails> reachabilityMetadataProperties = new HashMap<>();
 
 		Processor(ZipArchiveOutputStream out) {
 			this.out = out;
@@ -224,7 +256,7 @@ class BootZipCopyAction implements CopyAction {
 		private void processDirectory(FileCopyDetails details) throws IOException {
 			String name = details.getRelativePath().getPathString();
 			ZipArchiveEntry entry = new ZipArchiveEntry(name + '/');
-			prepareEntry(entry, name, getTime(details), UnixStat.FILE_FLAG | details.getMode());
+			prepareEntry(entry, name, getTime(details), getFileMode(details));
 			this.out.putArchiveEntry(entry);
 			this.out.closeArchiveEntry();
 			this.writtenDirectories.add(name);
@@ -233,7 +265,7 @@ class BootZipCopyAction implements CopyAction {
 		private void processFile(FileCopyDetails details) throws IOException {
 			String name = details.getRelativePath().getPathString();
 			ZipArchiveEntry entry = new ZipArchiveEntry(name);
-			prepareEntry(entry, name, getTime(details), UnixStat.FILE_FLAG | details.getMode());
+			prepareEntry(entry, name, getTime(details), getFileMode(details));
 			ZipCompression compression = BootZipCopyAction.this.compressionResolver.apply(details);
 			if (compression == ZipCompression.STORED) {
 				prepareStoredEntry(details, entry);
@@ -242,7 +274,10 @@ class BootZipCopyAction implements CopyAction {
 			details.copyTo(this.out);
 			this.out.closeArchiveEntry();
 			if (BootZipCopyAction.this.librarySpec.isSatisfiedBy(details)) {
-				this.writtenLibraries.add(name);
+				this.writtenLibraries.put(name, details);
+			}
+			if (REACHABILITY_METADATA_PROPERTIES_LOCATION_PATTERN.matcher(name).matches()) {
+				this.reachabilityMetadataProperties.put(name, details);
 			}
 			if (BootZipCopyAction.this.layerResolver != null) {
 				Layer layer = BootZipCopyAction.this.layerResolver.getLayer(details);
@@ -254,7 +289,7 @@ class BootZipCopyAction implements CopyAction {
 			String parentDirectory = getParentDirectory(name);
 			if (parentDirectory != null && this.writtenDirectories.add(parentDirectory)) {
 				ZipArchiveEntry entry = new ZipArchiveEntry(parentDirectory + '/');
-				prepareEntry(entry, parentDirectory, time, UnixStat.DIR_FLAG | UnixStat.DEFAULT_DIR_PERM);
+				prepareEntry(entry, parentDirectory, time, getDirMode());
 				this.out.putArchiveEntry(entry);
 				this.out.closeArchiveEntry();
 			}
@@ -271,7 +306,9 @@ class BootZipCopyAction implements CopyAction {
 		void finish() throws IOException {
 			writeLoaderEntriesIfNecessary(null);
 			writeJarToolsIfNecessary();
+			writeSignatureFileIfNecessary();
 			writeClassPathIndexIfNecessary();
+			writeNativeImageArgFileIfNecessary();
 			// We must write the layer index last
 			writeLayersIndexIfNecessary();
 		}
@@ -284,7 +321,8 @@ class BootZipCopyAction implements CopyAction {
 				// Always write loader entries after META-INF directory (see gh-16698)
 				return;
 			}
-			LoaderZipEntries loaderEntries = new LoaderZipEntries(getTime());
+			LoaderZipEntries loaderEntries = new LoaderZipEntries(getTime(), getDirMode(), getFileMode(),
+					BootZipCopyAction.this.loaderImplementation);
 			this.writtenLoaderEntries = loaderEntries.writeTo(this.out);
 			if (BootZipCopyAction.this.layerResolver != null) {
 				for (String name : this.writtenLoaderEntries.getFiles()) {
@@ -303,30 +341,74 @@ class BootZipCopyAction implements CopyAction {
 		}
 
 		private void writeJarToolsIfNecessary() throws IOException {
-			if (BootZipCopyAction.this.layerToolsLocation != null) {
-				writeJarModeLibrary(BootZipCopyAction.this.layerToolsLocation, JarModeLibrary.LAYER_TOOLS);
+			if (BootZipCopyAction.this.jarmodeToolsLocation != null) {
+				writeJarModeLibrary(BootZipCopyAction.this.jarmodeToolsLocation, JarModeLibrary.TOOLS);
 			}
 		}
 
 		private void writeJarModeLibrary(String location, JarModeLibrary library) throws IOException {
 			String name = location + library.getName();
-			writeEntry(name, ZipEntryContentWriter.fromInputStream(library.openStream()), false,
-					(entry) -> prepareStoredEntry(library.openStream(), entry));
+			writeEntry(name, ZipEntryContentWriter.fromInputStream(library.openStream()), false, (entry) -> {
+				try (InputStream in = library.openStream()) {
+					prepareStoredEntry(library.openStream(), entry);
+				}
+			});
 			if (BootZipCopyAction.this.layerResolver != null) {
 				Layer layer = BootZipCopyAction.this.layerResolver.getLayer(library);
 				this.layerIndex.add(layer, name);
 			}
 		}
 
+		private void writeSignatureFileIfNecessary() throws IOException {
+			if (BootZipCopyAction.this.supportsSignatureFile && hasSignedLibrary()) {
+				writeEntry("META-INF/BOOT.SF", (out) -> {
+				}, false);
+			}
+		}
+
+		private boolean hasSignedLibrary() throws IOException {
+			for (FileCopyDetails writtenLibrary : this.writtenLibraries.values()) {
+				if (FileUtils.isSignedJarFile(writtenLibrary.getFile())) {
+					return true;
+				}
+			}
+			return false;
+		}
+
 		private void writeClassPathIndexIfNecessary() throws IOException {
 			Attributes manifestAttributes = BootZipCopyAction.this.manifest.getAttributes();
 			String classPathIndex = (String) manifestAttributes.get("Spring-Boot-Classpath-Index");
 			if (classPathIndex != null) {
-				List<String> lines = this.writtenLibraries.stream().map((line) -> "- \"" + line + "\"")
-						.collect(Collectors.toList());
-				writeEntry(classPathIndex, ZipEntryContentWriter.fromLines(BootZipCopyAction.this.encoding, lines),
-						true);
+				Set<String> libraryNames = this.writtenLibraries.keySet();
+				List<String> lines = libraryNames.stream().map((line) -> "- \"" + line + "\"").toList();
+				ZipEntryContentWriter writer = ZipEntryContentWriter.fromLines(BootZipCopyAction.this.encoding, lines);
+				writeEntry(classPathIndex, writer, true);
 			}
+		}
+
+		private void writeNativeImageArgFileIfNecessary() throws IOException {
+			Set<String> excludes = new LinkedHashSet<>();
+			for (Map.Entry<String, FileCopyDetails> entry : this.writtenLibraries.entrySet()) {
+				DependencyDescriptor descriptor = BootZipCopyAction.this.resolvedDependencies
+					.find(entry.getValue().getFile());
+				LibraryCoordinates coordinates = (descriptor != null) ? descriptor.getCoordinates() : null;
+				FileCopyDetails propertiesFile = (coordinates != null) ? this.reachabilityMetadataProperties
+					.get(ReachabilityMetadataProperties.getLocation(coordinates)) : null;
+				if (propertiesFile != null) {
+					try (InputStream inputStream = propertiesFile.open()) {
+						ReachabilityMetadataProperties properties = ReachabilityMetadataProperties
+							.fromInputStream(inputStream);
+						if (properties.isOverridden()) {
+							excludes.add(entry.getKey());
+						}
+					}
+				}
+			}
+			NativeImageArgFile argFile = new NativeImageArgFile(excludes);
+			argFile.writeIfNecessary((lines) -> {
+				ZipEntryContentWriter writer = ZipEntryContentWriter.fromLines(BootZipCopyAction.this.encoding, lines);
+				writeEntry(NativeImageArgFile.LOCATION, writer, true);
+			});
 		}
 
 		private void writeLayersIndexIfNecessary() throws IOException {
@@ -348,7 +430,7 @@ class BootZipCopyAction implements CopyAction {
 		private void writeEntry(String name, ZipEntryContentWriter entryWriter, boolean addToLayerIndex,
 				ZipEntryCustomizer entryCustomizer) throws IOException {
 			ZipArchiveEntry entry = new ZipArchiveEntry(name);
-			prepareEntry(entry, name, getTime(), UnixStat.FILE_FLAG | UnixStat.DEFAULT_FILE_PERM);
+			prepareEntry(entry, name, getTime(), getFileMode());
 			entryCustomizer.customize(entry);
 			this.out.putArchiveEntry(entry);
 			entryWriter.writeTo(this.out);
@@ -363,7 +445,7 @@ class BootZipCopyAction implements CopyAction {
 			writeParentDirectoriesIfNecessary(name, time);
 			entry.setUnixMode(mode);
 			if (time != null) {
-				entry.setTime(time);
+				entry.setTime(DefaultTimeZoneOffset.INSTANCE.removeFrom(time));
 			}
 		}
 
@@ -390,6 +472,31 @@ class BootZipCopyAction implements CopyAction {
 				return details.getLastModified();
 			}
 			return null;
+		}
+
+		private int getDirMode() {
+			return (BootZipCopyAction.this.dirMode != null) ? BootZipCopyAction.this.dirMode
+					: UnixStat.DIR_FLAG | UnixStat.DEFAULT_DIR_PERM;
+		}
+
+		private int getFileMode() {
+			return (BootZipCopyAction.this.fileMode != null) ? BootZipCopyAction.this.fileMode
+					: UnixStat.FILE_FLAG | UnixStat.DEFAULT_FILE_PERM;
+		}
+
+		private int getFileMode(FileCopyDetails details) {
+			return (BootZipCopyAction.this.fileMode != null) ? BootZipCopyAction.this.fileMode
+					: UnixStat.FILE_FLAG | getPermissions(details);
+		}
+
+		private int getPermissions(FileCopyDetails details) {
+			return (GradleVersion.current().compareTo(GradleVersion.version("8.3")) >= 0)
+					? details.getPermissions().toUnixNumeric() : getMode(details);
+		}
+
+		@SuppressWarnings("deprecation")
+		private int getMode(FileCopyDetails details) {
+			return details.getMode();
 		}
 
 	}
@@ -469,11 +576,8 @@ class BootZipCopyAction implements CopyAction {
 		private long size;
 
 		CrcAndSize(InputStream inputStream) throws IOException {
-			try {
+			try (inputStream) {
 				load(inputStream);
-			}
-			finally {
-				inputStream.close();
 			}
 		}
 
