@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,7 +27,6 @@ import java.util.Map;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.core.annotation.AnnotationAwareOrderComparator;
@@ -46,7 +45,8 @@ import org.springframework.util.ReflectionUtils;
 public class Instantiator<T> {
 
 	private static final Comparator<Constructor<?>> CONSTRUCTOR_COMPARATOR = Comparator
-			.<Constructor<?>>comparingInt(Constructor::getParameterCount).reversed();
+		.<Constructor<?>>comparingInt(Constructor::getParameterCount)
+		.reversed();
 
 	private static final FailureHandler throwingFailureHandler = (type, implementationName, failure) -> {
 		throw new IllegalArgumentException("Unable to instantiate " + implementationName + " [" + type.getName() + "]",
@@ -109,7 +109,7 @@ public class Instantiator<T> {
 	 * @return a list of instantiated instances
 	 */
 	public List<T> instantiate(Collection<String> names) {
-		return instantiate((ClassLoader) null, names);
+		return instantiate(null, names);
 	}
 
 	/**
@@ -126,6 +126,40 @@ public class Instantiator<T> {
 	}
 
 	/**
+	 * Instantiate the given set of class name, injecting constructor arguments as
+	 * necessary.
+	 * @param name the class name to instantiate
+	 * @return an instantiated instance
+	 * @since 3.4.0
+	 */
+	public T instantiate(String name) {
+		return instantiate(null, name);
+	}
+
+	/**
+	 * Instantiate the given set of class name, injecting constructor arguments as
+	 * necessary.
+	 * @param classLoader the source classloader
+	 * @param name the class name to instantiate
+	 * @return an instantiated instance
+	 * @since 3.4.0
+	 */
+	public T instantiate(ClassLoader classLoader, String name) {
+		return instantiate(TypeSupplier.forName(classLoader, name));
+	}
+
+	/**
+	 * Instantiate the given set of classes, injecting constructor arguments as necessary.
+	 * @param type the types to instantiate
+	 * @return a list of instantiated instances
+	 * @since 3.4.0
+	 */
+	public T instantiateType(Class<?> type) {
+		Assert.notNull(type, "Type must not be null");
+		return instantiate(TypeSupplier.forType(type));
+	}
+
+	/**
 	 * Instantiate the given set of classes, injecting constructor arguments as necessary.
 	 * @param types the types to instantiate
 	 * @return a list of instantiated instances
@@ -133,13 +167,27 @@ public class Instantiator<T> {
 	 */
 	public List<T> instantiateTypes(Collection<Class<?>> types) {
 		Assert.notNull(types, "Types must not be null");
-		return instantiate(types.stream().map((type) -> TypeSupplier.forType(type)));
+		return instantiate(types.stream().map(TypeSupplier::forType));
+	}
+
+	/**
+	 * Get an injectable argument instance for the given type. This method can be used
+	 * when manually instantiating an object without reflection.
+	 * @param <A> the argument type
+	 * @param type the argument type
+	 * @return the argument to inject or {@code null}
+	 * @since 3.4.0
+	 */
+	@SuppressWarnings("unchecked")
+	public <A> A getArg(Class<A> type) {
+		Assert.notNull(type, "'type' must not be null");
+		Function<Class<?>, Object> parameter = getAvailableParameter(type);
+		Assert.isTrue(parameter != null, "Unknown argument type " + type.getName());
+		return (A) parameter.apply(this.type);
 	}
 
 	private List<T> instantiate(Stream<TypeSupplier> typeSuppliers) {
-		List<T> instances = typeSuppliers.map(this::instantiate).collect(Collectors.toList());
-		AnnotationAwareOrderComparator.sort(instances);
-		return Collections.unmodifiableList(instances);
+		return typeSuppliers.map(this::instantiate).sorted(AnnotationAwareOrderComparator.INSTANCE).toList();
 	}
 
 	private T instantiate(TypeSupplier typeSupplier) {
@@ -244,7 +292,7 @@ public class Instantiator<T> {
 				}
 
 				@Override
-				public Class<?> get() throws ClassNotFoundException {
+				public Class<?> get() {
 					return type;
 				}
 
